--- a/src/front/styles/parents.css
+++ b/src/front/styles/parents.css
@@ -2,11 +2,12 @@
   width: 180px;
   height: 160px;
   border-radius: 50%;
+  margin-left: 10%;
 }
 
 #bio {
   margin-top: 20px;
-  margin-left: 240px;
+  margin-left: 170px;
   width: 480px;
   height: 200px;
 }
@@ -16,11 +17,11 @@
   margin-bottom: 20px;
   font-size: medium;
 }
-
-#children {
-  margin-right: 20%;
+#dropdown-button-example1 {
+  background-color: white;
+  color: black;
 }
 #button {
   display: block;
-  margin-left: 50%;
+  margin-left: 40%;
 }
