added css to text

--- a/src/front/styles/contacts.css
+++ b/src/front/styles/contacts.css
@@ -6,9 +6,13 @@
   align-self: center;
   background-color: whitesmoke;
   margin-left: 30%;
+  letter-spacing: 1px;
+  line-height: 1.8;
 }
 
 #contact {
   background-color: whitesmoke;
   margin-left: 30%;
+  letter-spacing: 1px;
+  line-height: 1.8;
 }
