--- a/src/front/styles/contacts.css
+++ b/src/front/styles/contacts.css
@@ -1,5 +1,5 @@
 #form {
-  padding: 5px;
+  padding: 15px;
 }
 
 #mission {
@@ -15,4 +15,8 @@
   margin-left: 30%;
   letter-spacing: 1px;
   line-height: 1.8;
+}
+
+#button {
+  margin-left: 43%;
 }
