changed layout and added picture

--- a/src/front/styles/contacts.css
+++ b/src/front/styles/contacts.css
@@ -1,22 +1,33 @@
 #form {
   padding: 15px;
+  margin-right: 10%;
 }
 
 #mission {
-  align-self: center;
-  background-color: whitesmoke;
-  margin-left: 30%;
+  letter-spacing: 1px;
+  line-height: 1.8;
+  margin-left: 15%;
+}
+
+#contact {
+  margin-left: 10%;
   letter-spacing: 1px;
   line-height: 1.8;
 }
 
-#contact {
-  background-color: whitesmoke;
+#titulo {
   margin-left: 30%;
-  letter-spacing: 1px;
-  line-height: 1.8;
+  padding-top: 5px;
+}
+#call {
+  margin-left: 15%;
+  padding-top: 5px;
 }
 
 #button {
   margin-left: 43%;
+}
+
+#kids {
+  width: 530px;
 }
