--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -1,1 +1,11 @@
 @import "../styles/footer.css";
+
+body {
+    margin: 0;
+}
+
+#base-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
