--- a/src/front/styles/searchpage.css
+++ b/src/front/styles/searchpage.css
@@ -1,11 +1,5 @@
-.me-2 {
-  background-color: white;
-  border: none;
-  border-radius: 50px;
-  height: 100%;
-  outline: none;
-  padding-inline-end: 50px;
-  padding-inline-start: 50px;
-  position: relative;
-  width: 100%;
+#google-map {
+    width: 600px;
+    height: 450px;
+    border: 0;
 }
