--- a/src/front/styles/footer.css
+++ b/src/front/styles/footer.css
@@ -1,7 +1,7 @@
 .page-footer {
   margin-top: auto;
-  background-color: #ffb74d;
-  color: white;
+  background-color: #f7f5f2;
+  color: #b3541e;
   left: 0;
   bottom: 0;
   width: 100%;
