--- a/src/front/styles/navbar.css
+++ b/src/front/styles/navbar.css
@@ -2,7 +2,7 @@
     General Styles used on every website (Don't Repeat Yourself)
 */
 .navbar {
-  background-color: #ffb74d;
+  background-color: #f7f5f2;
 }
 
 #title {
@@ -11,19 +11,24 @@
   font-size: xx-large;
   margin-right: 80%;
 }
+a {
+  color: white;
+}
 #button1 {
   padding: 10px;
   margin-right: 15px;
+  background-color: #b3541e;
 }
+
 #button2 {
   padding: 10px;
-  background-color: black;
+  background-color: #b3541e;
 }
+
 #mary {
-  height: 60px;
-  width: 50px;
-  align-self: flex-start;
-  border-radius: 50%;
-  display: flex;
-  align-items: flex-start;
+  height: 70px;
+  width: 80px;
+  align-self: left;
+  border-radius: 40%;
+  margin-left: 30px;
 }
