changed the color in the buttons and headers in pricing components

--- a/src/front/styles/Pricing.css
+++ b/src/front/styles/Pricing.css
@@ -18,7 +18,7 @@
 }
 
 .price .col-header {
-  background-color: #fbb464ff;
+  background-color: #b3541e;
   color: white;
   font-size: 25px;
 }
@@ -35,7 +35,7 @@
 }
 
 .button {
-  background-color: #3da2daff;
+  background-color: white;
   border: none;
   color: white;
   padding: 10px 25px;
