--- a/src/front/styles/parents.css
+++ b/src/front/styles/parents.css
@@ -1,27 +1,48 @@
-#profile {
-  width: 180px;
-  height: 160px;
-  border-radius: 50%;
+#prof {
   margin-left: 10%;
+  margin-top: 20px;
+  font-family: "Libre Baskerville", serif;
+  font-size: large;
+}
+#prof1 {
+  margin-left: 10%;
+  margin-top: 20px;
+  font-family: "Libre Baskerville", serif;
+  font-size: large;
+}
+#prof2 {
+  margin-left: 10%;
+  margin-top: 20px;
+  font-size: 18px;
+  font-family: "Libre Baskerville", serif;
+  font-size: large;
 }
 
+#lego {
+  height: 180px;
+  width: 190px;
+  border-radius: 50%;
+  margin-top: 20px;
+}
+
+#pt {
+  margin-left: 20px;
+}
 #bio {
   margin-top: 20px;
-  margin-left: 190px;
+  margin-left: 50%;
   width: 480px;
-  height: 200px;
+  height: 400px;
+  padding: 20px;
+  margin-left: 90px;
+  font-family: "Libre Baskerville", serif;
+  font-size: large;
 }
 
-#form {
-  margin-top: 20px;
-  margin-bottom: 20px;
-  font-size: medium;
-}
-#dropdown-button-example1 {
+#ww {
   background-color: white;
   color: black;
-}
-#button {
-  display: block;
-  margin-left: 40%;
+  margin-left: 30%;
+  margin-top: 20px;
+  font-family: "Libre Baskerville", serif;
 }
