fixed the search page issue with displaying cards

--- a/src/front/styles/searchpage.css
+++ b/src/front/styles/searchpage.css
@@ -1,5 +1,29 @@
 #google-map {
-    width: 600px;
-    height: 450px;
-    border: 0;
+  width: 600px;
+  height: 450px;
+  border: 0;
+}
+
+#cart {
+  margin: 15px;
+}
+#nome {
+  color: #b3541e;
+}
+
+#deet {
+  font-family: "Lato";
+  font-size: large;
+}
+#dets {
+  font-family: "Lato";
+  font-size: large;
+  letter-spacing: normal;
+}
+
+#ba {
+  font-family: "Libre Baskerville", serif;
+  color: white;
+  background-color: #b3541e;
+  outline: white;
 }
