--- a/src/front/styles/navbar.css
+++ b/src/front/styles/navbar.css
@@ -5,12 +5,6 @@
   background-color: #f7f5f2;
 }
 
-#title {
-  display: flex;
-  align-items: flex-start;
-  font-size: xx-large;
-  margin-right: 80%;
-}
 #ss {
   color: white;
 }
@@ -18,11 +12,13 @@
   padding: 10px;
   margin-right: 15px;
   background-color: #b3541e;
+  font-family: "Libre Baskerville", serif;
 }
 
 #button2 {
   padding: 10px;
   background-color: #b3541e;
+  font-family: "Libre Baskerville", serif;
 }
 
 #mary {
