--- a/src/front/styles/login.css
+++ b/src/front/styles/login.css
@@ -19,11 +19,13 @@
   margin: 20px;
   margin-left: 20%;
   font-family: "Libre Baskerville", serif;
+  font-size: large;
 }
 
 #ll {
   margin: 20px;
   background-color: #b3541e;
+  font-size: large;
   color: white;
   margin-left: 35%;
   font-family: "Libre Baskerville", serif;
